fix: brown logo issue and don't show animation over map on mobile

--- a/src/components/ArrowAnimation/arrow.modules.css
+++ b/src/components/ArrowAnimation/arrow.modules.css
@@ -5,7 +5,7 @@
   --draw-arrow-head-duration: 300ms;
 }
 
-path {
+.arrow-path {
   stroke: black;
   stroke-width: 2;
   stroke-linecap: round;
